apps/home/templates/service-coiot.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant-coiot
  annotations:
    lbipam.cilium.io/ips: "192.168.1.5"
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app.kubernetes.io/instance: home
    app.kubernetes.io/name: home-assistant
  ports:
    - name: coiot
      protocol: UDP
      port: 5683
      targetPort: 5683
