apps/home/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant
spec:
  parentRefs:
    - name: main
      namespace: gateway
      sectionName: https
  hostnames:
    - home.meyeringh.org
  rules:
    - backendRefs:
        - name: home-home-assistant
          port: 8123
